--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "prettier:fix": "npx prettier . --write",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npx cypress run",
+    "test:browser": "npx cypress open"
   },
   "keywords": [],
   "author": "",
